openshift-web-api/pipelines/pipeline-dc.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: dotnetapi
  name: dotnetapi
  namespace: delta
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: dotnetapi
    deploymentconfig: dotnetapi
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: dotnetapi
        deploymentconfig: dotnetapi
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/cicd/dotnetapi-develop:latest
        imagePullPolicy: Always
        name: dotnetapi
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        #volumeMounts:
        #- mountPath: /app/log
        #  name: dotnetapi-volume-1
        #- mountPath: /config
        #  name: volume-6sqpb
        #- mountPath: /logback
        #  name: volume-dyfjo
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      #volumes:
      #- emptyDir: {}
      #  name: dotnetapi-volume-1
      #- configMap:
      #    defaultMode: 420
      #    name: dotnetapi-config
      #  name: volume-6sqpb
      #- configMap:
      #    defaultMode: 420
      #    name: circuitbusiness-logback-spring-xml
      #  name: volume-dyfjo
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - dotnetapi
      from:
        kind: ImageStreamTag
        name: dotnetapi-develop:latest
        namespace: cicd
    type: ImageChange
