openshift-web-api/pipelines/pipeline-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dotnetapi
  name: dotnetapi
  namespace: delta
spec:
  port:
    targetPort: 8080-tcp // must match Service name
  tls:
    termination: edge
  to:
    kind: Service
    name: dotnetapi
    weight: 100
  wildcardPolicy: None
